[package]
name = "app"
version = "0.1.0"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2018"

[dependencies]
device = { path = "../device" }
rt = { path = "../rt" }
log = { path = "../log" }
cortex-m-semihosting = "0.3.2"
embedded-hal = "0.2.2"
[dependencies.cortex-m]
version = "0.6.0"
features = ["inline-asm"]
