[package]
name = "app"
version = "0.1.0"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2018"

[dependencies]
arch = { path = "../arch" }
device = { path = "../device" }
rt = { path = "../rt" }
log = { path = "../log" }
kernel = { path = "../kernel" }
user = { path = "../user" }
util = { path = "../util" }
cortex-m-semihosting = "0.3.2"
embedded-hal = "0.2.2"
