[package]
name = "app"
version = "0.1.0"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2018"

[dependencies]
arch = { path = "../arch" }
stm32f429zi = { path = "../devices/stm32f429zi" }
rt = { path = "../rt" }
log = { path = "../log" }
kernel = { path = "../kernel" }
user = { path = "../user" }
util = { path = "../util" }
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.2"
