[package]
name = "kernel"
version = "0.1.0"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2018"

[dependencies]
arch = { path = "../arch" }
util = { path = "../util" }
rt = { path = "../rt" }
log = { path = "../log" }
embedded-hal = "0.2.2"
cortex-m-semihosting = "0.3.2"
[build-dependencies]
cc = "1.0"